# kearsley-algorithm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
kearsley/: __init__.py  kearsley.py
kearsley/tests/: test_kearsley.py
