[tool.poetry]
name = "kearsley"
version = "0.1.0"
description = "Structural comparison of 3D points"
authors = ["Marcelo Moreno <marcelo.moreno.suarez@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
scipy = "^1.6.1"
pytest = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
